# ObjectOrientedProgramming

./: .cmake-format.py  .gitignore  CMakeLists.txt  Chart.cpp  Chart.h  ElevatorShaft.cpp  ElevatorShaft.h  MainWindow.cpp  MainWindow.h  ObjectOrientedProgramming.pro  README.md  building.cpp  building.h  config.json  data.json  elevator.cpp  elevator.h  floor.cpp  floor.h  main.cpp  monitor.cpp  monitor.h  passenger.cpp  passenger.h  resources.qrc  statistics.cpp  statistics.h
.assets/1st/: design-description.md
.assets/2nd/: design-description.md
.assets/3rd/: design-description.md
.assets/4th/: design-description.md
.assets/5th/: design-description.md
doc/李潇20009200401-第一次上机/: 设计说明-第一次上机.html
doc/李潇20009200401-第一次上机/src/: building.cpp  floor.cpp  monitor.cpp  passenger.h
doc/李潇20009200401-第三次上机/: 设计说明-第三次上机.html
doc/李潇20009200401-第三次上机/src/: elevator.cpp  elevator.h  floor.cpp  monitor.h
doc/李潇20009200401-第二次上机/: 设计说明-第二次上机.md
doc/李潇20009200401-第二次上机/src/: monitor.h  passenger.cpp
doc/李潇20009200401-第五次上机/: 设计说明-第五次上机.md
doc/李潇20009200401-第五次上机/src/: Chart.cpp  config.json  monitor.h
doc/李潇20009200401-第四次上机/: 设计说明-第四次上机.md
doc/李潇20009200401-第四次上机/src/: floor.h  main.cpp  monitor.cpp  passenger.cpp  passenger.h  statistics.cpp
include/: Chart.h  ElevatorShaft.h  LineChart.h  MainWindow.h  building.h  elevator.h  floor.h  monitor.h  passenger.h  statistics.h
reports/李潇20009200401-第一次上机/: 设计说明-第一次上机.md
reports/李潇20009200401-第一次上机/src/: building 2.h  config 2.json  elevator 2.cpp  elevator.h  floor 2.h  main 2.cpp  monitor 2.h  passenger.cpp
reports/李潇20009200401-第三次上机/: 设计说明-第三次上机.md
reports/李潇20009200401-第三次上机/src/: ElevatorShaft.cpp  ElevatorShaft.h  MainWindow.h  config 2.json  main 2.cpp  monitor 2.cpp  passenger.cpp  passenger.h
reports/李潇20009200401-第二次上机/: 设计说明-第二次上机 2.html
reports/李潇20009200401-第二次上机/src/: elevator 3.h  floor 3.cpp  main 2.cpp
reports/李潇20009200401-第五次上机/: 设计说明-第五次上机.html
reports/李潇20009200401-第五次上机/src/: Chart 2.h  LineChart 2.cpp  building.cpp  passenger.cpp  statistics.h
reports/李潇20009200401-第四次上机/: 设计说明-第四次上机.html
reports/李潇20009200401-第四次上机/src/: Chart 2.h  MainWindow.cpp  building.h  config.json  elevator 2.cpp  statistics 2.h
src/: Chart.cpp  ElevatorShaft.cpp  LineChart.cpp  MainWindow.cpp  building.cpp  elevator.cpp  floor.cpp  main.cpp  monitor.cpp  passenger.cpp  statistics.cpp
